--- a/index.html
+++ b/index.html
@@ -5,58 +5,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign-up Form</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="split-screen">
         <div class="left">
-            <div class="img">
+            <div class="logo">
                 <img src="images/odin-lined.png" alt="Odin logo">
-                <span>ODIN</span>
+                <h1 class="logo-text">ODIN</h1>
             </div>
         </div>
 
         <div class="right">
-            <p>This is not real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started.</p>
-            <p>You <em>know</em> you want to.</p>
-
-            <p>Let's do this!</p>
+            <div class="content">
+                <p>
+                    This is not real online service! You know you need something like this in your life to help you realize your deepest dreams. <br>
+                    Sign up <em>now</em> to get started.
+                </p>
+                <p>You <em>know</em> you want to.</p>
+            </div>
 
             <form action="#" method="post">
-                <div class="user-name">
-                    <div>
-                        <label for="first-name">First Name</label>
-                        <input type="text" name="first-name" id="first-name">
+                <p>Let's do this!</p>
+                <div class="new-form">
+                    <div class="user name">
+                        <div>
+                            <label for="first-name">First Name</label>
+                            <input type="text" name="first-name" id="first-name">
+                        </div>
+                        <div>
+                            <label for="last-name">Last Name</label>
+                            <input type="text" name="last-name" id="last-name">
+                        </div>
                     </div>
-                    <div>
-                        <label for="last-name">Last Name</label>
-                        <input type="text" name="last-name" id="last-name">
+                    <div class="user contact">
+                        <div>
+                            <label for="email">Email</label>
+                            <input type="email" name="email" id="email">
+                        </div>
+                        <div>
+                            <label for="phone-num">Phone Number</label>
+                            <input type="tel" name="phone-num" id="phone-num">
+                        </div>
+                    </div>
+                    <div class="user password">
+                        <div>
+                            <label for="pwd">Password</label>
+                            <input type="password" name="password" id="pwd"> <br>
+                            <span class="error"></span>
+                        </div>
+                        <div>
+                            <label for="confirm-pwd">Confirm Password</label>
+                            <input type="password" name="confirm-pwd" id="confirm-pwd">
+                        </div>
                     </div>
                 </div>
-                <div class="user-contact">
-                    <div>
-                        <label for="email">Email</label>
-                        <input type="email" name="email" id="email">
-                    </div>
-                    <div>
-                        <label for="phone-num">Phone Number</label>
-                        <input type="tel" name="phone-num" id="phone-num">
-                    </div>
-                </div>
-                <div class="user-password">
-                    <div>
-                        <label for="pwd">Password</label>
-                        <input type="password" name="password" id="pwd">
-                    </div>
-                    <div>
-                        <label for="confirm-pwd">Confirm Password</label>
-                        <input type="password" name="confirm-pwd" id="confirm-pwd">
-                    </div>
-                </div>
-
-                <button type="submit">Create Account</button>
             </form>
-
-            <p>Already have an account? <a href="#">Log in</a></p>
+            
+            <div class="account">
+                <button type="submit">Create Account</button>
+                <p>Already have an account? <a href="#">Log in</a></p>
+            </div>
         </div>
     </div>
 </body>
